# petSwipe

./: .gitignore  README.md  render.yaml
backend/: .env  .env.example  .gitignore  README.md  compose.yaml  nginx.Dockerfile  nginx.conf
backend/C-service/: C-service.cpp  C-service.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  vcpkg.json
backend/C-service/db/: postgre.cpp  postgre.h  postgres.cpp  postgres.h
backend/C-service/handlers/: pet_handler.cpp  pet_handler.h  swipe_handler.cpp  swipe_handler.h
backend/C-service/utils/: validator.cpp  validator.h
backend/Go-service/: Dockerfile.api  Makefile  go.mod  go.sum
backend/Go-service/api/: config.yaml  main.go
backend/Go-service/api/adapters/aaa/: auth.go
backend/Go-service/api/adapters/db/: chat_repo.go  user_repo.go
backend/Go-service/api/adapters/rest/: api.go
backend/Go-service/api/config/: config.go
backend/Go-service/api/core/: errors.go  models.go  ports.go
backend/Go-service/api/migration/: 000001_init.sql
backend/Go-service/migration/: 000001_init.sql
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/chats/: page.tsx
frontend/src/app/create-application-form/: page.tsx
frontend/src/app/pet/[id]/: page.tsx
frontend/src/app/pets/: page.tsx
frontend/src/entities/pets/: PetProfile.ts
frontend/src/entities/swipe/: PetProfile.ts
frontend/src/features/auth/: index.ts
frontend/src/features/auth/ui/: AuthSwitch.tsx
frontend/src/features/footer/: index.ts
frontend/src/features/footer/ui/: FeedbackForm.tsx  NavLinks.tsx
frontend/src/features/home/: index.ts
frontend/src/features/home/ui/: EntranceInfo.tsx  HomePagePetCard.tsx  (+2 more)
frontend/src/features/pets/: index.ts
frontend/src/features/swipe/: index.ts
frontend/src/providers/: index.ts
frontend/src/providers/ui/: AuthProvider.tsx
frontend/src/shared/config/: api.ts
frontend/src/widgets/applicationForm/: index.ts
frontend/src/widgets/swipe/: index.ts
(+19 files in other folders)
